2002-01-14  Dietmar Maurer  <dietmar@ximian.com>

	* mono/tests/exception6.cs: new tests for ADD_OVF, MUL_OVF
	added tests for SUB_OVF, SUB_OVF_UN

2001-12-21  Dietmar Maurer  <dietmar@ximian.com>

	* mono/tests/Makefile.am (TESTSRC): disabled stream-writer test

2001-12-21  Aaron Weber  <aaron@ximian.com>

	* doc/faq (A): added a linebreak that was missing and was causing
	a heading to appear badly.

2001-12-20  Aaron Weber  <aaron@ximian.com>

	* doc/faq: added <a name=""> nav links, and moved all MSFT-related
	questions into a single section.

2001-12-17  Aaron Weber  <aaron@ximian.com>

	* doc/faq (Q): Question-by-question, line-by-line revision.

2001-12-17  Dietmar Maurer  <dietmar@ximian.com>

	* mono/tests/time.cs: new test

2001-11-30  Radek Doulik  <rodo@ximian.com>

	* configure.in: remove ACCESS_UNALIGNED="no" from ppc

2001-11-29  Radek Doulik  <rodo@ximian.com>

	* configure.in (ACCESS_UNALIGNED): uncommented and modified
	powerpc-*-linux* 
	generate mono/arch/ppc/Makefile

2001-11-26  Dietmar Maurer  <dietmar@ximian.com>

	* mono/tests/exception3.cs: modified the test to show a bug in the
	current exception handling implementation.

2001-11-13  Dick Porter  <dick@ximian.com>

	* configure.in: Some more tests for pthread features
	(specifically, glibc 2.1 doesnt define pthread_mutex_timedlock but
	still needs _GNU_SOURCE for PTHREAD_MUTEX_RECURSIVE)

2001-11-09  Dick Porter  <dick@ximian.com>

	* configure.in: Try and get large file support, but it's not fatal
	if it's not there (the io-layer just ignores the high word in that
	case.)

	Check for windows builds, and only bother to look for pthreads and
	large files if we're not building for cygwin or native win32.  Not
	having pthread support on Posix systems is now a fatal error.

	* autogen.sh: Fix ACLOCAL_FLAGS - it wasn't being passed to
	aclocal

2001-10-15  Dietmar Maurer  <dietmar@ximian.com>

	* mono/tests/Makefile.am: removed JITTESTS, simply run all tests for
	target testjit. 
