@@ -1,3 +1,8 @@
+
+Fri Feb 1 15:13:25 CET 2002 Paolo Molaro <lupus@ximian.com>
+
+	* configure.in: add some support/fixes for cross-compilation.
+
 2002-01-14  Dietmar Maurer  <dietmar@ximian.com>
 
 	* mono/tests/exception6.cs: new tests for ADD_OVF, MUL_OVF
